kind/ingress/cloud-provider-kind/gateway.yaml
# cluster wide gateway api (LB and routing). it needs to be created after the dockercompose has been started and the cloud-provider-kins is operational

apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cluster-gateway
  namespace: default
spec:
  gatewayClassName: cloud-provider-kind
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: All
  - name: https-wildcard
    protocol: HTTPS
    port: 443
    hostname: "*.undpgeohub.org"
    tls:
      mode: Terminate
      certificateRefs:
      - name: wildcard-undpgeohub-tls
    allowedRoutes:
      namespaces:
        from: All
